DRAKEN-2639: Refactoring and formatting