@@ -30,7 +30,7 @@ class SchemaVerificationTest {
 		final var generatedSchema = readString(Path.of(generatedSchemaFile));
 
 		assertThat(storedSchema)
-			.as(String.format("Please reflect modifications to entities in file: %s", STORED_SCHEMA_FILE))
+			.as("Please reflect modifications to entities in file: %s".formatted(STORED_SCHEMA_FILE))
 			.isEqualToNormalizingWhitespace(generatedSchema);
 	}
 
